--- a/config/config.json
+++ b/config/config.json
@@ -15,9 +15,9 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "password": "Ok1hFgPkIfRKQt7TeeXH",
+    "database": "railway",
+    "host": "containers-us-west-74.railway.app",
     "dialect": "mysql"
   }
 }
