--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "Ok1hFgPkIfRKQt7TeeXH",
-    "database": "railway",
-    "host": "containers-us-west-74.railway.app",
+    "password": null,
+    "database": "debt-buddy-db",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
@@ -18,6 +18,7 @@
     "password": "Ok1hFgPkIfRKQt7TeeXH",
     "database": "railway",
     "host": "containers-us-west-74.railway.app",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "port": 6486
   }
 }
